--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -117,6 +117,12 @@
     <Compile Include="Dialogs\EditSimpleMetadata.Designer.cs">
       <DependentUpon>EditSimpleMetadata.cs</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\FullMetadata.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\FullMetadata.Designer.cs">
+      <DependentUpon>FullMetadata.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\Help.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -200,6 +206,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>messages.resx</DependentUpon>
     </Compile>
+    <Compile Include="Metadata.cs" />
     <Compile Include="ObiForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -384,6 +391,10 @@
     <EmbeddedResource Include="Dialogs\About.resx">
       <SubType>Designer</SubType>
       <DependentUpon>About.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\FullMetadata.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>FullMetadata.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\Help.resx">
       <SubType>Designer</SubType>
