--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -58,13 +58,13 @@
     <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="urakawa, Version=0.5.2532.22887, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="urakawa, Version=0.5.0.26982, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\branches\toolkit-more-virtual-methods\bin\Debug\urakawa.dll</HintPath>
+      <HintPath>..\..\..\..\..\branches\sdk-0-5\implementation\UrakawaToolkit\bin\Debug\urakawa.dll</HintPath>
     </Reference>
-    <Reference Include="XukToZed, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="XukToZed, Version=0.5.0.27247, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\implementation\XukToZed\XukToZed\bin\Debug\XukToZed.dll</HintPath>
+      <HintPath>..\..\..\..\..\branches\sdk-0-5\implementation\XukToZed\XukToZed\bin\Debug\XukToZed.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
