--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -16,7 +16,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetZone>LocalIntranet</TargetZone>
     <SignAssembly>false</SignAssembly>
-    <ApplicationIcon>obird.ico</ApplicationIcon>
+    <ApplicationIcon>obi.ico</ApplicationIcon>
     <PublishUrl>C:\Documents and Settings\Julien Quint\My Documents\Urakawa\trunk\urakawa\application\dist\weekly\20061211\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -116,12 +116,6 @@
     </Compile>
     <Compile Include="Dialogs\EditSimpleMetadata.Designer.cs">
       <DependentUpon>EditSimpleMetadata.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Dialogs\FullMetadata.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Dialogs\FullMetadata.Designer.cs">
-      <DependentUpon>FullMetadata.cs</DependentUpon>
     </Compile>
     <Compile Include="Dialogs\Help.cs">
       <SubType>Form</SubType>
@@ -398,10 +392,6 @@
       <SubType>Designer</SubType>
       <DependentUpon>About.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Dialogs\FullMetadata.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>FullMetadata.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\Help.resx">
       <SubType>Designer</SubType>
       <DependentUpon>Help.cs</DependentUpon>
@@ -478,8 +468,7 @@
     <Content Include="images\obird32.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="obird.ico" />
-    <Content Include="obird16.ico" />
+    <Content Include="obi.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
