--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -293,6 +293,7 @@
     </Compile>
     <Compile Include="RecordingSession.cs" />
     <Compile Include="SectionNode.cs" />
+    <Compile Include="Selection.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SimpleMetadata.cs" />
     <Compile Include="UserControls\AbstractBlock.cs">
