Reworked selection. Reworked playlist and added global playlist (some bugs left when deleting) Fixed some shortcut issues (e.g. F2 for strips, etc.) but some remain (e.g. Undo for strips?)

--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -293,6 +293,7 @@
     </Compile>
     <Compile Include="RecordingSession.cs" />
     <Compile Include="SectionNode.cs" />
+    <Compile Include="Selection.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SimpleMetadata.cs" />
     <Compile Include="UserControls\AbstractBlock.cs">
