--- a/trunk/docs/Makefile
+++ b/trunk/docs/Makefile
@@ -3,7 +3,8 @@
 
 XSLT =		xsltproc
 STYLESHEET =	template.xslt
-HTML_FILES =	events.html index.html strip_manager_shortcuts.html
+HTML_FILES =	events.html index.html strip_manager_shortcuts.html \
+		tasklist.html
 
 all:	$(HTML_FILES)
 
