Renamed Project.ExportToZed.cs to Project.CleanAndExport.cs Added function CleanProjectAssets, which only cleans and doesn't export. ExportToZed also now calls CleanProjectAssets.
One open issue is that when CleanProjectAssets fails, there is still a temporary asset directory.  We need to remove this and ensure a roll-back to a pre-cleaned up state.

--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -219,8 +219,8 @@
     <Compile Include="Playlist.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Project.Blocks.cs" />
+    <Compile Include="Project.CleanAndExport.cs" />
     <Compile Include="Project.cs" />
-    <Compile Include="Project.ExportToZed.cs" />
     <Compile Include="Project.TOC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Dialogs\EditSimpleMetadata.resx">
