--- a/docs/Makefile
+++ b/docs/Makefile
@@ -3,8 +3,8 @@
 XSLT =		xsltproc
 INDENT =	xmllint --format
 STYLESHEET =	template.xslt
-HTML_FILES =	events.html index.html strip_manager_shortcuts.html \
-		tasklist.html
+HTML_FILES =	blocks.html events.html index.html \
+		strip_manager_shortcuts.html tasklist.html
 
 all:	$(HTML_FILES)
 
