--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Events\Strip\ImportAssetEventArgs.cs" />
     <Compile Include="Events\Audio\Recorder\PhraseEventArgs.cs" />
     <Compile Include="Events\Strip\UpdateTimeEventArgs.cs" />
+    <Compile Include="ImportStructure.cs" />
     <Compile Include="IOUtils.cs" />
     <Compile Include="Localizer.cs" />
     <Compile Include="messages.Designer.cs">
