--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -123,6 +123,12 @@
     <Compile Include="Dialogs\EditSimpleMetadata.Designer.cs">
       <DependentUpon>EditSimpleMetadata.cs</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\FullMetadata.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\FullMetadata.Designer.cs">
+      <DependentUpon>FullMetadata.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\GoToPage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -327,6 +333,12 @@
     <Compile Include="UserControls\GraphicalVuMeter.Designer.cs">
       <DependentUpon>GraphicalVuMeter.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\MetadataPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\MetadataPanel.Designer.cs">
+      <DependentUpon>MetadataPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\ProjectPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -402,6 +414,10 @@
       <SubType>Designer</SubType>
       <DependentUpon>About.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\FullMetadata.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>FullMetadata.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\GoToPage.resx">
       <SubType>Designer</SubType>
       <DependentUpon>GoToPage.cs</DependentUpon>
@@ -436,6 +452,10 @@
     <EmbeddedResource Include="UserControls\GraphicalVuMeter.resx">
       <DependentUpon>GraphicalVuMeter.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\MetadataPanel.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>MetadataPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControls\TextVUMeterPanel.resx">
       <SubType>Designer</SubType>
