--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -162,7 +162,7 @@
     <Compile Include="Dialogs\ShowSource.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Dialogs\ShowSource.Designer.cs">
+    <Compile Include="Dialogs\ShowSource.designer.cs">
       <DependentUpon>ShowSource.cs</DependentUpon>
     </Compile>
     <Compile Include="Dialogs\Split.cs">
@@ -433,8 +433,8 @@
       <DependentUpon>SentenceDetection.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\ShowSource.resx">
-      <SubType>Designer</SubType>
       <DependentUpon>ShowSource.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\TransportRecord.resx">
       <SubType>Designer</SubType>
