Slight touch-up to command manager (made some methods virtual) Merging selection management with command management in Zaboom.

--- a/prototype/Zaboom/Zaboom/Zaboom.csproj
+++ b/prototype/Zaboom/Zaboom/Zaboom.csproj
@@ -43,7 +43,8 @@
   <ItemGroup>
     <Compile Include="Audio\AudioDevice.cs" />
     <Compile Include="Audio\Player.cs" />
-    <Compile Include="Commands.cs" />
+    <Compile Include="Commands\AddTreeNode.cs" />
+    <Compile Include="Commands\CommandManager.cs" />
     <Compile Include="NewProjectDialog.cs">
       <SubType>Form</SubType>
     </Compile>
